<resources>
    <string name="app_name">AtriumOrderApp_MOBDEVTFinals</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account">Sign In to Your Account</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="log_in_to_your_account_now">Log In to Your Account Now!</string>
</resources>