<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C68423"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:background="#C89D5F"
        android:backgroundTint="#EDCD9E"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtPassword"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:background="#C89D5F"
        android:backgroundTint="#EDCD9E"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtEmail"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="110dp"
        android:background="#C89D5F"
        android:backgroundTint="#EDCD9E"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="44dp"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="177dp"
        android:background="#C89D5F"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/create_a_new_account"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="31dp"
        android:text="@string/log_in_to_your_account_now"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>